# FreeThrowQT

./: AbstractTeam.h  Button.h  CMakeLists.txt  HomeTeam.h  Player.h  addplayer.cpp  addplayer.h  addplayer.ui  button.xml  editplayers.cpp  editplayers.h  editplayers.ui  main.cpp  orange.xml  points.cpp  points.h  points.ui  pointschoice.cpp  pointschoice.h  pointschoice.ui  removeone.cpp  removeone.h  removeone.ui  removeplayer.cpp  removeplayer.h  removeplayer.ui  savedata.qrc  savedata.txt  startgame.cpp  startgame.h  startgame.ui  stats.cpp  stats.h  stats.ui  team.cpp  team.h  viewstats.cpp  viewstats.h  viewstats.ui  white.xml  (+3 more)
